# crew_automation_branch_currency_agents

./: .env  .gitignore  README.md  pyproject.toml
src/crew_automation_branch_currency_agents/: app.py  crew.py  main.py
src/crew_automation_branch_currency_agents/config/: agents.yaml  tasks.yaml
