[project]
name = "crew_automation_branch_currency_agents"
version = "0.1.0"
description = "crew_automation_branch_currency_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.37.0",
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
crew_automation_branch_currency_agents = "crew_automation_branch_currency_agents.main:run"
run_crew = "crew_automation_branch_currency_agents.main:run"
train = "crew_automation_branch_currency_agents.main:train"
replay = "crew_automation_branch_currency_agents.main:replay"
test = "crew_automation_branch_currency_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
